# XRPL-trading-bot

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-app.yml
docs/source/: modules.rst  xrpl_trading_bot.clients.rst  xrpl_trading_bot.constants.rst  xrpl_trading_bot.globals.rst  xrpl_trading_bot.order_books.rst  xrpl_trading_bot.rst  xrpl_trading_bot.txn_parser.rst  xrpl_trading_bot.txn_parser.utils.rst  xrpl_trading_bot.wallet.rst
tests/clients/: test_xrp_request_async.py
tests/txn_parser/: analyze_spreads.py  final_txn_parser.py  spreads.json  test_final_txn_parser.py
xrpl_trading_bot/: main.py  test.py
xrpl_trading_bot/clients/: __init__.py  main.py  methods.py  utils.py  websocket_uri.py
xrpl_trading_bot/constants/: __init__.py  main.py
xrpl_trading_bot/globals/: __init__.py  constants.py  variables.py
xrpl_trading_bot/order_books/: __init__.py  main.py
xrpl_trading_bot/trading/: __init__.py  main.py
xrpl_trading_bot/trading/paths/: __init__.py  main.py  utils.py
xrpl_trading_bot/trading/paths/spatial_arbitrage/: __init__.py  main.py
xrpl_trading_bot/txn_parser/: __init__.py  balance_changes.py  order_book_changes.py
xrpl_trading_bot/txn_parser/utils/: __init__.py  balance_changes_utils.py  order_book_changes_utils.py  transaction_data_utils.py  types.py
xrpl_trading_bot/wallet/: __init__.py  main.py
