[tool.poetry]
name = "xrpl-trading-bot"
version = "0.1.0"
description = "A trading bot that uses the decentralized exchange of the XRP Ledger."
authors = ["LimpidCrypto <info@limpidcrypto.de>"]

[tool.poetry.dependencies]
python = "^3.8"
xrpl-py = "^1.4.0"
mypy = "^0.942"
isort = "^5.10.1"
Sphinx = "^4.5.0"
black = "^22.3.0"
pydash = "^5.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
unittest = "^0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
